# eqa-framework

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: pr.md  resume.md
.claude/hooks/: check-session-start.sh  save-session.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_check.md
.github/workflows/: ci.yml  release.yml
docs/agentes/: architectanalyst-c.md  codeguard-c.md  designreviewer-c.md  eqa-config.md  eqa-init.md  quality-report.md
docs/guias/: architectanalyst-c.md  codeguard-c.md  designreviewer-c.md  eqa-config.md  eqa-init.md  quality-report.md
docs/specs/: plan_entorno_eqa_framework.md  plan_proyecto_embedded_quality_agents.docx  plan_proyecto_embedded_quality_agents.md
examples/configs/: pyproject.toml.example
examples/sample_c_project/: README.md  pyproject.toml
examples/sample_c_project/src/: main.c  sensor.c
examples/sample_c_project/src/app/: app_logic.c  app_logic.h
examples/sample_c_project/src/hal/: hal_uart.c  hal_uart.h
src/eqa_framework/: cli.py
src/eqa_framework/architectanalyst_c/: agent.py  config.py  orchestrator.py  snapshot_store.py
src/eqa_framework/architectanalyst_c/metrics/: coupling_analyzer.py
src/eqa_framework/codeguard_c/: agent.py  config.py  orchestrator.py
src/eqa_framework/codeguard_c/checks/: complexity_check.py  misra_check.py  security_check.py
src/eqa_framework/config_editor/: app.py  personal_config.py
src/eqa_framework/designreviewer_c/: agent.py  config.py  orchestrator.py
src/eqa_framework/designreviewer_c/analyzers/: include_graph_analyzer.py  layer_violations_analyzer.py
src/eqa_framework/init/: agent.py  app.py  getting-started.md  scanner.py  writer.py
src/eqa_framework/shared/: config.py  report.py  reporting.py  verifiable.py
tests/: test_placeholder.py
tests/e2e/: test_architectanalyst_c_e2e.py  test_codeguard_c_e2e.py  test_designreviewer_c_e2e.py
tests/integration/: test_complexity_check_integration.py  test_config_merge_integration.py  test_eqa_init.py  test_misra_check_integration.py  test_report_flag.py  test_security_check_integration.py
tests/unit/architectanalyst_c/: test_coupling_analyzer.py  test_report_builder.py  test_snapshot_store.py
tests/unit/codeguard_c/: test_complexity_check.py  test_misra_check.py  test_report_builder.py  test_security_check.py
tests/unit/config_editor/: test_app.py  test_merge_config.py  test_personal_config.py
tests/unit/designreviewer_c/: test_include_graph_analyzer.py  test_layer_violations_analyzer.py  test_report_builder.py
tests/unit/init/: test_app.py  test_scanner.py  test_writer.py
tests/unit/shared/: test_config.py  test_report.py
